--- a/MeteoSkyWP/ForecastPage.xaml
+++ b/MeteoSkyWP/ForecastPage.xaml
@@ -1,4 +1,5 @@
 ﻿<common:BasePage
+  x:Name="ForecastPageCtrl"
   x:Class="MeteoSkyWP.ForecastPage"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -21,10 +22,14 @@
 
     <tools:IsLongForecastBoolToIconConverter
       x:Key="isLongForecastBoolToIconConverter" />
+
     <DataTemplate
       x:Key="forecastDataTemplate">
       <ListView
+        Name="forecastLstView"
         ItemsSource="{Binding Item2}"
+        IsItemClickEnabled="True"
+        ItemClick="ListView_ItemClick"
         ContinuumNavigationTransitionInfo.ExitElementContainer="True">
         <ListView.ItemTemplate>
           <DataTemplate>
@@ -50,6 +55,7 @@
 
               <Border
                 Grid.Column="1"
+                Visibility="{Binding ElementName=ForecastPageCtrl, Path=DataContext.TemperatureAndRainVIsibility}"
                 Background="{Binding TemperatureColor}">
                 <TextBlock
                   VerticalAlignment="Center"
@@ -63,6 +69,7 @@
 
               <Border
                 Grid.Column="2"
+                Visibility="{Binding ElementName=ForecastPageCtrl, Path=DataContext.TemperatureAndRainVIsibility}"
                 Background="{Binding RainColor}">
                 <TextBlock
                   VerticalAlignment="Center"
@@ -72,6 +79,53 @@
                   Style="{ThemeResource ListViewItemContentTextBlockStyle}"
                   Pivot.SlideInAnimationGroup="1"
                   CommonNavigationTransitionInfo.IsStaggerElement="True" />
+              </Border>
+
+              <Border
+                Grid.Column="1"
+                Visibility="{Binding ElementName=ForecastPageCtrl, Path=DataContext.WindVisibility}"
+                Background="{Binding WindColor}">
+                <Image
+                  VerticalAlignment="Center"
+                  Margin="8"
+                  Height="26"
+                  Width="26"
+                  Source="{Binding WindDirIconPath}"
+                  Pivot.SlideInAnimationGroup="1"
+                  CommonNavigationTransitionInfo.IsStaggerElement="True" />
+              </Border>
+
+              <Border
+                Grid.Column="2"
+                Visibility="{Binding ElementName=ForecastPageCtrl, Path=DataContext.WindVisibility}"
+                Background="{Binding WindColor}">
+                <Grid>
+                  <Grid.ColumnDefinitions>
+                    <ColumnDefinition
+                      Width="*" />
+                    <ColumnDefinition
+                      Width="*" />
+                  </Grid.ColumnDefinitions>
+                  
+                  <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    Foreground="Black"
+                    Text="{Binding WindAverage}"
+                    Style="{ThemeResource ListViewItemContentTextBlockStyle}"
+                    Pivot.SlideInAnimationGroup="1"
+                    CommonNavigationTransitionInfo.IsStaggerElement="True" />
+                  <TextBlock
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    Foreground="Black"
+                    Text="{Binding WindPeak}"
+                    Style="{ThemeResource ListViewItemContentTextBlockStyle}"
+                    Pivot.SlideInAnimationGroup="1"
+                    CommonNavigationTransitionInfo.IsStaggerElement="True" />
+                </Grid>
               </Border>
 
               <Image
@@ -120,7 +174,7 @@
             Style="{ThemeResource GroupHeaderTextBlockStyle}">
             Températures
           </TextBlock>
-          
+
           <Image
             Grid.Row="1"
             Margin="0,5,0,10"
@@ -216,8 +270,10 @@
         <AppBarButton
           Label="{Binding TogglePerHourLabel}"
           Command="{Binding TogglePerHourViewCommand}"
-          Visibility="{Binding ToggleHourBtnVisibility}"
-          />
+          Visibility="{Binding ToggleHourBtnVisibility}" />
+        <AppBarButton
+          Label="Activer/desactiver mode vent"
+          Command="{Binding ToggleWindVisibilityCommand}" />
       </CommandBar.SecondaryCommands>
     </CommandBar>
   </Page.BottomAppBar>
